# kayra_ros

./: .gitignore  README.md  Tavsiye Edilen Süreç.md  Teori.md  Uygulama.md
garp_ws/src/garp_description/: CMakeLists.txt  package.xml
garp_ws/src/garp_description/launch/: display.launch.py
garp_ws/src/garp_description/urdf/: garp_robot.urdf.xacro  gazebo_plugins.urdf.xacro  sensors.urdf.xacro  (+1 more)
garp_ws/src/garp_scripts/: package.xml  setup.cfg  setup.py
garp_ws/src/garp_simulate/: CMakeLists.txt  package.xml
garp_ws/src/garp_simulate/config/: gz_bridge.yaml  mapping.rviz  nav2_params.yaml  slam_toolbox.yaml
garp_ws/src/garp_simulate/launch/: gazebo.launch.py  navigation.launch.py  obstacle.launch.py  obstacle_navigation.launch.py  slam.launch.py
garp_ws/src/garp_simulate/maps/: my_map.pgm  my_map.yaml
garp_ws/src/garp_simulate/worlds/: empty_world.sdf  house_world.sdf  obstacle_world.sdf
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
resources/configs/: nav2_params.yaml  slam_toolbox_localization.yaml  slam_toolbox_mapping.yaml
src/garp_description/: CMakeLists.txt
src/garp_simulate/: CMakeLists.txt
src/garp_simulate/config/: base.rviz  gz_bridge.yaml  stb_localization.yaml  stb_mapping.yaml
src/garp_simulate/launch/: my_world.launch.py
src/garp_simulate/maps/: in_my_house.pgm  in_my_house.yaml
src/garp_simulate/worlds/: my_world.sdf
src/garp_tools/: package.xml  setup.cfg  setup.py
src/garp_tools/garp_tools/: teleop_keyboard.py  waypoint_navigator.py
src/robot_kol/: CMakeLists.txt  package.xml
(+49 files in other folders)
